# CcMusic

./: .gitignore  BottomBar.cpp  BottomBar.h  CMakeLists.txt  CcMusic.cpp  CcMusic.h  CcMusic.pro  CcMusic.ui  CloseWnd.cpp  CloseWnd.h  LyricWgt.cpp  LyricWgt.h  MusicPlaylist.cpp  MusicPlaylist.h  PlayerBody.cpp  PlayerBody.h  ProcessSlider.cpp  ProcessSlider.h  SongPicture.cpp  SongPicture.h  TitleBar.cpp  TitleBar.h  UAC.manifest  VolumeSlider.cpp  VolumeSlider.h  main.cpp  res.qrc  uac.rc
Data/Config/: CcMusic.xml
Data/Image/: icon.psd
Data/Style/: default.css
LAV/: LAVAudio.ax  LAVSplitter.ax  LAVVideo.ax  uninstall_audio.bat  uninstall_splitter.bat  uninstall_video.bat
